--- a/index.html
+++ b/index.html
@@ -44,32 +44,71 @@
     </div>
 
     <script>
-        // Expanded concert data with time, details, and ticket links
+        // Expanded and more comprehensive concert data
         const concerts = [
-            { artist: 'Cody Johnson', venue: 'Utah First Credit Union Amphitheatre', date: '2025-06-28', time: '7:30 PM', details: 'Leather Deluxe Tour', ticketLink: '#' },
-            { artist: 'Hozier', venue: 'Utah First Credit Union Amphitheatre', date: '2025-08-01', time: '8:00 PM', details: 'Unreal Unearth Tour 2025', ticketLink: '#' },
-            { artist: 'Chris Stapleton', venue: 'Utah First Credit Union Amphitheatre', date: '2025-08-15', time: '7:00 PM', details: 'All-American Road Show', ticketLink: '#' },
-            { artist: 'Sleep Token', venue: 'Maverik Center', date: '2025-10-05', time: '8:00 PM', details: 'Special Guest: Empire State Bastard', ticketLink: '#' },
-            { artist: 'Tate McRae', venue: 'Delta Center', date: '2025-10-07', time: '7:00 PM', details: 'Think Later World Tour', ticketLink: '#' },
-            { artist: 'Benson Boone', venue: 'Delta Center', date: '2025-10-08', time: '8:00 PM', details: 'Fireworks and Rollerblades World Tour', ticketLink: '#' },
             { artist: 'Alex Warren', venue: 'The Union Event Center', date: '2025-05-28', time: '7:00 PM', details: 'Moved from The Depot', ticketLink: '#' },
             { artist: 'Cole Hartley', venue: 'Soundwell', date: '2025-05-28', time: '7:30 PM', details: 'Album Release Show', ticketLink: '#' },
             { artist: 'Lyn Lapid', venue: 'The Complex', date: '2025-05-28', time: '8:00 PM', details: 'All Ages', ticketLink: '#' },
             { artist: 'Napalm Death', venue: 'Metro Music Hall', date: '2025-05-29', time: '6:00 PM', details: '21+ Event', ticketLink: '#' },
             { artist: 'Hardy', venue: 'Utah First Credit Union Amphitheatre', date: '2025-05-29', time: '6:30 PM', details: 'Quit!! Tour', ticketLink: '#' },
-            { artist: 'Trampled by Turtles', venue: 'Red Butte Garden', date: '2025-05-29', time: '7:30 PM', details: 'Outdoor Concert Series', ticketLink: '#' },
+            { artist: 'Trampled By Turtles', venue: 'Red Butte Garden', date: '2025-05-29', time: '7:30 PM', details: 'with Clay Street Unit', ticketLink: '#' },
             { artist: 'Beats Antique', venue: 'The Depot', date: '2025-05-30', time: '7:00 PM', details: 'With special guest', ticketLink: '#' },
+            { artist: 'The Jauntee x Lapdog', venue: 'The State Room', date: '2025-05-30', time: '8:00 PM', details: '21+ Event', ticketLink: '#' },
             { artist: 'Lord Huron', venue: 'Sandy Amphitheater', date: '2025-05-31', time: '7:00 PM', details: 'An Evening with Lord Huron', ticketLink: '#' },
-            { artist: 'Sleeping With Sirens', venue: 'Utah First Credit Union Amphitheatre', date: '2025-06-20', time: '6:00 PM', details: 'Co-headlining with Pierce the Veil', ticketLink: '#' },
-            { artist: 'Pierce the Veil', venue: 'Utah First Credit Union Amphitheatre', date: '2025-06-20', time: '7:00 PM', details: 'Co-headlining with Sleeping With Sirens', ticketLink: '#' },
-            { artist: 'Halsey', venue: 'Utah First Credit Union Amphitheatre', date: '2025-06-24', time: '7:00 PM', details: 'For My Last Trick Tour', ticketLink: '#' },
-            { artist: 'The Lumineers', venue: 'Utah First Credit Union Amphitheatre', date: '2025-07-30', time: '7:30 PM', details: 'The Automatic World Tour', ticketLink: '#' },
+            { artist: 'Ivan Cornejo', venue: 'Maverik Center', date: '2025-05-31', time: '8:00 PM', details: 'Mirada Tour', ticketLink: '#' },
             { artist: 'Thievery Corporation', venue: 'The Depot', date: '2025-06-06', time: '7:00 PM', details: 'With Simba Sax', ticketLink: '#' },
             { artist: 'Orchestral Manoeuvres In The Dark', venue: 'The Union Event Center', date: '2025-06-06', time: '8:00 PM', details: 'Rescheduled from 9/24/24', ticketLink: '#' },
             { artist: 'Avi Kaplan', venue: 'The Commonwealth Room', date: '2025-06-06', time: '8:00 PM', details: 'With Guthrie Brown', ticketLink: '#' },
             { artist: 'Blondshell', venue: 'Soundwell', date: '2025-06-06', time: '8:00 PM', details: '21+', ticketLink: '#' },
             { artist: 'Brand New', venue: 'Maverik Center', date: '2025-06-07', time: '8:00 PM', details: '', ticketLink: '#' },
+            { artist: 'Dead Floyd', venue: 'The State Room', date: '2025-06-07', time: '8:00 PM', details: 'Grateful Dead/Pink Floyd Tribute', ticketLink: '#' },
             { artist: 'Bayside', venue: 'The Depot', date: '2025-06-08', time: '6:30 PM', details: '25th Anniversary Tour', ticketLink: '#' },
+            { artist: 'Ryan Bingham', venue: 'Red Butte Garden', date: '2025-06-08', time: '7:30 PM', details: 'with The Texas Gentlemen', ticketLink: '#' },
+            { artist: 'Gong', venue: 'The State Room', date: '2025-06-10', time: '8:00 PM', details: '21+ Event', ticketLink: '#' },
+            { artist: 'Styx & Don Felder', venue: 'Utah First Credit Union Amphitheatre', date: '2025-06-11', time: '6:45 PM', details: 'The Brotherhood of Rock Tour', ticketLink: '#' },
+            { artist: 'James Arthur', venue: 'Red Butte Garden', date: '2025-06-12', time: '7:30 PM', details: 'Bitter Sweet Love World Tour', ticketLink: '#' },
+        	{ artist: 'Mumford & Sons', venue: 'Utah First Credit Union Amphitheatre', date: '2025-06-14', time: '7:30 PM', details: '2025 Tour', ticketLink: '#' },
+            { artist: 'Earth, Wind & Fire', venue: 'Maverik Center', date: '2025-06-16', time: '7:30 PM', details: 'Heart & Soul Tour 2025', ticketLink: '#' },
+            { artist: 'Drive-By Truckers & Deer Tick', venue: 'Red Butte Garden', date: '2025-06-17', time: '6:30 PM', details: 'Charm & Decadence Tour', ticketLink: '#' },
+            { artist: 'Barenaked Ladies', venue: 'Red Butte Garden', date: '2025-06-18', time: '6:30 PM', details: 'with Guster and Fastball', ticketLink: '#' },
+            { artist: 'The English Beat', venue: 'The State Room', date: '2025-06-19', time: '8:00 PM', details: '21+ Event', ticketLink: '#' },
+            { artist: 'Sleeping With Sirens & Pierce the Veil', venue: 'Utah First Credit Union Amphitheatre', date: '2025-06-20', time: '6:00 PM', details: 'I Can\'t Hear You World Tour', ticketLink: '#' },
+            { artist: 'Panchiko', venue: 'The Complex', date: '2025-06-23', time: '7:00 PM', details: '', ticketLink: '#' },
+            { artist: '"Weird Al" Yankovic', venue: 'Maverik Center', date: '2025-06-23', time: '7:30 PM', details: 'Bigger & Weirder 2025 Tour', ticketLink: '#' },
+            { artist: 'Halsey', venue: 'Utah First Credit Union Amphitheatre', date: '2025-06-24', time: '7:00 PM', details: 'For My Last Trick Tour', ticketLink: '#' },
+            { artist: 'Cody Johnson', venue: 'Utah First Credit Union Amphitheatre', date: '2025-06-28', time: '7:30 PM', details: 'Leather Deluxe Tour', ticketLink: '#' },
+            { artist: 'Kesha & Scissor Sisters', venue: 'Utah First Credit Union Amphitheatre', date: '2025-07-01', time: '7:00 PM', details: 'The Tits Out Tour', ticketLink: '#' },
+            { artist: 'Dude Perfect', venue: 'Maverik Center', date: '2025-07-03', time: '7:00 PM', details: 'Panda-Monium Tour', ticketLink: '#' },
+            { artist: 'Parkway Drive, Killswitch Engage, I Prevail', venue: 'Utah First Credit Union Amphitheatre', date: '2025-07-08', time: '3:00 PM', details: 'Summer of Loud', ticketLink: '#' },
+            { artist: 'INCUBUS', venue: 'Utah First Credit Union Amphitheatre', date: '2025-07-12', time: '7:00 PM', details: 'Performing MORNING VIEW In Its Entirety', ticketLink: '#' },
+            { artist: 'Watchhouse', venue: 'Red Butte Garden', date: '2025-07-13', time: '7:00 PM', details: 'Rituals Tour 2025', ticketLink: '#' },
+            { artist: 'Barry Manilow', venue: 'Maverik Center', date: '2025-07-14', time: '7:00 PM', details: 'The Last West Valley City Concert', ticketLink: '#' },
+            { artist: 'Jason Aldean', venue: 'Utah First Credit Union Amphitheatre', date: '2025-07-26', time: '7:30 PM', details: 'Full Throttle Tour 2025', ticketLink: '#' },
+            { artist: 'The Lumineers', venue: 'Utah First Credit Union Amphitheatre', date: '2025-07-30', time: '7:30 PM', details: 'The Automatic World Tour', ticketLink: '#' },
+            { artist: 'Dierks Bentley', venue: 'Utah First Credit Union Amphitheatre', date: '2025-07-31', time: '7:00 PM', details: 'Broken Branches Tour', ticketLink: '#' },
+            { artist: 'Hozier', venue: 'Utah First Credit Union Amphitheatre', date: '2025-08-01', time: '8:00 PM', details: 'Unreal Unearth Tour 2025', ticketLink: '#' },
+            { artist: 'Dropkick Murphys and Bad Religion', venue: 'The Union Event Center', date: '2025-08-02', time: '5:30 PM', details: '', ticketLink: '#' },
+            { artist: 'Russ, Big Sean & Sabrina Claudio', venue: 'Utah First Credit Union Amphitheatre', date: '2025-08-08', time: '7:00 PM', details: 'Into The W!LD Tour', ticketLink: '#' },
+            { artist: 'RÜFÜS DU SOL', venue: 'Utah First Credit Union Amphitheatre', date: '2025-08-10', time: '7:30 PM', details: 'Inhale / Exhale World Tour 2025', ticketLink: '#' },
+            { artist: 'Shinedown', venue: 'Maverik Center', date: '2025-08-11', time: '7:00 PM', details: 'Dance, Kid, Dance Tour', ticketLink: '#' },
+            { artist: 'Men I Trust', venue: 'The Complex', date: '2025-08-12', time: '7:00 PM', details: 'Equus Tour 2025', ticketLink: '#' },
+            { artist: 'Cyndi Lauper', venue: 'Utah First Credit Union Amphitheatre', date: '2025-08-14', time: '7:30 PM', details: 'Girls Just Wanna Have Fun Farewell Tour', ticketLink: '#' },
+            { artist: 'Nine Inch Nails', venue: 'Maverik Center', date: '2025-08-14', time: '7:30 PM', details: 'Peel It Back Tour 2025', ticketLink: '#' },
+            { artist: 'Chris Stapleton', venue: 'Utah First Credit Union Amphitheatre', date: '2025-08-15', time: '7:00 PM', details: 'All-American Road Show', ticketLink: '#' },
+            { artist: 'Ice Nine Kills', venue: 'The Union Event Center', date: '2025-08-20', time: '5:00 PM', details: 'Hell of a Summer Tour', ticketLink: '#' },
+            { artist: 'Goo Goo Dolls', venue: 'Utah First Credit Union Amphitheatre', date: '2025-08-26', time: '7:00 PM', details: '', ticketLink: '#' },
+            { artist: 'Teddy Swims', venue: 'America First Field', date: '2025-08-28', time: '6:30 PM', details: '', ticketLink: '#' },
+            { artist: 'Gregory Alan Isakov', venue: 'Red Butte Garden', date: '2025-09-04', time: '7:30 PM', details: 'with Dean Johnson', ticketLink: '#' },
+            { artist: 'Megan Moroney', venue: 'Maverik Center', date: '2025-09-18', time: '8:00 PM', details: 'Am I Okay? Tour', ticketLink: '#' },
+            { artist: 'Big Thief', venue: 'Library Square', date: '2025-09-22', time: '7:00 PM', details: '', ticketLink: '#' },
+            { artist: 'Bring Me The Horizon', venue: 'Maverik Center', date: '2025-09-30', time: '6:00 PM', details: 'USA Ascension Program Part 01', ticketLink: '#' },
+            { artist: 'Morrissey', venue: 'The Union Event Center', date: '2025-10-04', time: '7:00 PM', details: '', ticketLink: '#' },
+            { artist: 'Sleep Token', venue: 'Maverik Center', date: '2025-10-05', time: '8:00 PM', details: 'Even in Arcadia Tour', ticketLink: '#' },
+            { artist: 'Tate McRae', venue: 'Delta Center', date: '2025-10-07', time: '7:00 PM', details: 'Think Later World Tour', ticketLink: '#' },
+            { artist: 'Benson Boone', venue: 'Delta Center', date: '2025-10-08', time: '8:00 PM', details: 'Fireworks and Rollerblades World Tour', ticketLink: '#' },
+            { artist: 'Lorna Shore', venue: 'The Union Event Center', date: '2025-10-20', time: '5:00 PM', details: '', ticketLink: '#' },
+            { artist: 'Blue October', venue: 'The Union Event Center', date: '2025-10-25', time: '7:00 PM', details: '', ticketLink: '#' },
+            { artist: 'Marc Rebillet', venue: 'The Union Event Center', date: '2025-10-26', time: '7:00 PM', details: 'Places I\'ve Never Played Tour', ticketLink: '#' },
         ];
 
         const concertList = document.getElementById('concert-list');
