--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         // Expanded and more comprehensive concert data
         const concerts = [
             { artist: 'Alex Warren', venue: 'The Union Event Center', date: '2025-05-28', time: '7:00 PM', details: 'Moved from The Depot', ticketLink: '#' },
-            { artist: 'Bloc Party', venue: 'The Union Event Center' date: '2025-06-12 Show Title: '20 Years of Bloc Party: Silent Alarm & Hits, with Blonde Redhead' ticketLink: 'https://www.ticketmaster.com/20-years-of-bloc-party-silent-salt-lake-city-utah-06-12-2025/event/1E00623ED6CC44DE'},
+            { artist: 'Bloc Party', venue: 'The Union Event Center', date: '2025-06-12, Show Title: "20 Years of Bloc Party: Silent Alarm & Hits with Blonde Redhead", ticketLink: 'https://www.ticketmaster.com/20-years-of-bloc-party-silent-salt-lake-city-utah-06-12-2025/event/1E00623ED6CC44DE'},
         ];
 
         const concertList = document.getElementById('concert-list');
